2009-10-21  Tobias C. Rittweiler <tcr@freebits.de>

	Make M-x slime-changelog-date work.

	* slime.el (slime-changelog-date): Make the function be callable
	interactively.

2009-10-21  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (ASDF): Document new commands.

2009-10-20  Martin Simmons  <martin@lispworks.com>

	* swank-lispworks.lisp (call-without-interrupts): Discourage use.
	(interesting-frame-p): Never show open frame bogons.

2009-10-19  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (thread-description): Remove it and supporting code,
	because it didn't really work.

	* swank.lisp (with-thread-description): Remove unused macro.

	* slime.el (slime-list-threads): Update information before
	setting the mode, otherwise it messes up current connection.

	* doc/slime.texi: fix typo.

2009-10-19  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (without-printing-errors): New macro.
	(to-string): Use it.
	(to-line): Use it, too. This fixes printing error occuring during
	inspecting to prevent the inspector from displaying something
	useful.

	Reported by xristos@suspicious.org.

2009-10-15  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-current-package): Move REPL stuff to contrib.

2009-10-15  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-current-package): Return REPL's package,
	if other are unavailable and if slime-repl is loaded.

2009-10-12  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el: Update copyright.

2009-10-10  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-length=): Fix (slime-length= '() 0).
	(slime-eval-feature-expression): Fix. Couldn't handle (NOT)
	and (NOT FOO BAR).

2009-10-09  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (stop-server): (list-threads) returns threads offset by 1,
	don't kill the wrong thread.

2009-10-06  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (map-backtrace): Handle null end-frame-number argument.
